--- a/references.bib
+++ b/references.bib
@@ -59,3 +59,18 @@
 	url = {http://dx.doi.org/10.1016/j.heliyon.2019.e01378},
 	langid = {en}
 }
+
+@article{hyndman1996,
+	title = {Sample Quantiles in Statistical Packages},
+	author = {Hyndman, Rob J. and Fan, Yanan},
+	year = {1996},
+	month = {11},
+	date = {1996-11},
+	journal = {The American Statistician},
+	pages = {361--365},
+	volume = {50},
+	number = {4},
+	doi = {10.1080/00031305.1996.10473566},
+	url = {http://dx.doi.org/10.1080/00031305.1996.10473566},
+	langid = {en}
+}
